--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "microsoftcloneproject3",
   "version": "1.0.0",
   "description": "Design clone on Microsoft.com homepage",
-  "main": "controller.js",
+  "default": "controller.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/josh-fie/MicrosoftHomepageClone/issues"
   },
-  "homepage": "https://github.com/josh-fie/MicrosoftHomepageClone#readme"
+  "homepage": "https://github.com/josh-fie/MicrosoftHomepageClone#readme",
+  "devDependencies": {
+    "parcel": "^2.8.3",
+    "parcel-reporter-static-files-copy": "^1.5.0"
+  }
 }
